Fix showing logo on mobile screens (#1)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,12 @@ h1, h2, h3, h4, h5, h6 {
     max-height: 40px;
 }
 
+.logo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
